k8s/BookService/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: books-deployment
    #namespace: bookshop
spec:
    replicas: 1
    selector:
        matchLabels:
            app: books
    template:
        metadata:
            labels:
                app: books
        spec:
            containers:
            - name: books-container
              image: melkye/books-image:2.0
              imagePullPolicy: IfNotPresent
              ports:
                - containerPort: 80
