k8s/BookService/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: books-service
  #namespace: bookshop
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 80
  selector:
    app: books
