k8s/BookService/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: books-ingress
  namespace: bookshop
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /books
            pathType: Prefix
            backend:
              service:
                name: books-service
                port:
                  number: 8080
